@@ -150,6 +150,23 @@ def check_data_consistency(pdf: pd.DataFrame,
             logger.warning('Dropping the superfluous %s column from the input data.', key)
             data.drop((key), axis=1, inplace=True)
 
+    # Check for any duplicated entry, which would make no sense.
+    if (duplic := data.duplicated()).any():
+        raise AmpycloudError('Duplicated hits in the input data:\n'
+                             f'{data[duplic].to_string(index=False)}')
+
+    # Check for inconsistencies
+    # 1 - A non-detection should not be coincident with a detection
+    # 2 - A VV hit should not be coincident with a hit or a non-detection
+    for hit_type in [0, -1]:
+        nodets = data[data['type'] == hit_type][['dt', 'ceilo']]
+        dets = data[data['type'] != hit_type][['dt', 'ceilo']]
+        merged = dets.merge(nodets, how='inner', on=['dt', 'ceilo'])
+        if len(merged) > 0:
+            raise AmpycloudError('Inconsistent input data '
+                                 f'(simultaneous type {hit_type} and !{hit_type}):\n'
+                                 f'{merged.to_string(index=False)}')
+
     # A brief sanity check of the heights. We do not issue Errors, since the code can cope
     # with those elements: we simply raise Warnings.
     msgs = []
